[package]
name = "aptos-cli-common"
version = "0.1.0"
edition = "2021"
description = "Common modules for creating an Aptos CLI command."

[dependencies]
anyhow = "1.0.42"
aptos-cli-config = { version = "0.1.0", path = "../aptos-cli-config" }
aptos-crypto = { version = "0.1.0" }
aptos-rest-client = "0.1.0"
aptos-sdk = "0.1.0"
aptos-types = "0.1.0"
base64 = "0.13.0"
bcs = "0.1.3"
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.18.2", features = ["full"] }
url = { version = "^2.2", features = ["serde"] }
