[package]
name = "aptos-cli-config"
version = "0.1.1"
description = "Aptos CLI configuration utilities extracted from the official Aptos CLI."
homepage = "https://aptos.is"
repository = "https://github.com/aptosis/aptos-toolkit"
authors = ["Ian Macalinao <ian@aptos.is>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "aptos", "config", "cli"]

[dependencies]
anyhow = "1.0.42"
aptos-crypto = "0.1.0"
aptos-types = "0.1.0"
base64 = "0.13.0"
bcs = "0.1.3"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.25"
thiserror = "1.0"
