[package]
name = "aptos-cli-config"
version = "0.1.2"
description = "Aptos CLI configuration utilities extracted from the official Aptos CLI."
homepage = "https://aptos.is"
repository = "https://github.com/aptosis/aptos-toolkit"
authors = ["Ian Macalinao <ian@aptos.is>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "aptos", "config", "cli"]

[dependencies]
anyhow = "1.0.42"
account-address = { version = "0.2.0", features = ["address32"] }
aptos-crypto = "0.2.1"
base64 = "0.13.0"
bcs = "0.1.3"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.4"
thiserror = "1.0"
