[package]
name = "aptos-create-resource-account"
version = "0.1.2"
description = "CLI for creating Aptos resource accounts."
homepage = "https://aptos.is"
repository = "https://github.com/aptosis/aptos-toolkit"
authors = ["Ian Macalinao <ian@aptos.is>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "aptos", "account", "cli"]

[dependencies]
anyhow = "1.0.42"
account-address = { version = "0.2.0", features = ["address32"] }
aptos-crypto = { version = "0.2.1" }
aptos-keygen = "0.2.1"
aptos-rest-client = "0.2.1"
aptos-types = "0.2.1"
async-trait = "0.1.64"
bcs = "0.1.3"
clap = { version = "3.2", features = ["derive"] }
clitool = "0.1.0"
move-core-types = { version = "0.2.1", features = [
    "address32"
], package = "mv-core-types" }
serde = { version = "1.0", features = ["derive"] }
static-address = { version = "0.2", features = ["address32"] }
tokio = { version = "1.18.2", features = ["full"] }
# workspace
aptos-cli-common = { version = "0.1.0", path = "../aptos-cli-common" }
aptos-cli-config = { version = "0.1.0", path = "../aptos-cli-config" }

[[bin]]
name = "aptos-create-resource-account"
path = "src/bin/aptos-create-resource-account.rs"
