[package]
name = "aptos-move-run"
version = "0.1.2"
description = "CLI for running arbitrary Move functions on Aptos."
homepage = "https://aptos.is"
repository = "https://github.com/aptosis/aptos-toolkit"
authors = ["Ian Macalinao <ian@aptos.is>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "aptos", "account", "cli"]

[dependencies]
anyhow = "1.0.42"
aptos-cli-common = { version = "0.1.0", path = "../aptos-cli-common" }
aptos-cli-config = { version = "0.1.0", path = "../aptos-cli-config" }
aptos-api-types = "0.2.1"
aptos-types = "0.2.1"
async-trait = "0.1.56"
bcs = "0.1.3"
clap = { version = "3.2", features = ["derive"] }
clitool = "0.1.0"
hex = "0.4.3"
move-core-types = { version = "0.2.1", features = [
    "address32"
], package = "mv-core-types" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }

[[bin]]
name = "aptos-move-run"
path = "src/bin/aptos-move-run.rs"
