[package]
name = "aptos-publish"
version = "0.1.2"
description = "CLI for publishing Move modules to Aptos."
homepage = "https://aptos.is"
repository = "https://github.com/aptosis/aptos-toolkit"
authors = ["Ian Macalinao <ian@aptos.is>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "aptos", "account", "cli"]

[dependencies]
anyhow = "1.0.42"
aptos-types = "0.2.1"
async-trait = "0.1.56"
clap = { version = "3.2", features = ["derive"] }
clitool = "0.1.0"
move-command-line-common = "0.2.1"
move-package = { version = "0.2.1", package = "mv-package" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
# workspace
aptos-cli-common = { version = "0.1.0", path = "../aptos-cli-common" }
aptos-cli-config = { version = "0.1.0", path = "../aptos-cli-config" }

[[bin]]
name = "aptos-publish"
path = "src/bin/aptos-publish.rs"
